name: liblastfm
version: 0.0.4.0
synopsis: Wrapper to Lastfm API
license: MIT
license-file: LICENSE
author: Matvey Aksenov, Dmitry Malikov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: Network APIs
description: Simple but complete interface to Lastfm API. Can send some stuff and receive reponses from Lastfm. JSON/XML parsing is an exercise for the user.
cabal-version: >= 1.9.2
build-type: Simple

library
  build-depends: base >= 3 && < 5,
                 bytestring >= 0.9 && < 0.11,
                 containers,
                 text,
                 data-default,
                 http-conduit,
                 mtl,
                 pureMD5 == 2.1.*,
                 network,
                 aeson == 0.6.*
  hs-source-dirs: src
  exposed-modules: Network.Lastfm
                   Network.Lastfm.Authentication
                   Network.Lastfm.Album
                   Network.Lastfm.Artist
                   Network.Lastfm.Chart
                   Network.Lastfm.Event
                   Network.Lastfm.Geo
                   Network.Lastfm.Group
                   Network.Lastfm.Library
                   Network.Lastfm.Tag
                   Network.Lastfm.Tasteometer
                   Network.Lastfm.Track
                   Network.Lastfm.User
                   Network.Lastfm.Request
                   Network.Lastfm.Response
  other-modules:   Network.Lastfm.Internal
  ghc-options: -Wall
               -fno-warn-unused-do-bind
               -threaded


test-suite json
  build-depends: base >= 3 && < 5,
                 bytestring >= 0.9 && < 0.11,
                 attoparsec >= 0.10,
                 aeson == 0.6.*,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 text,
                 liblastfm
  type: exitcode-stdio-1.0
  main-is: json.hs
  hs-source-dirs: tests
  ghc-options: -Wall
               -fno-warn-unused-do-bind
               -fno-warn-orphans


source-repository head
  type:     git
  location: https://github.com/supki/haskell-liblastfm
