name: liblastfm
version: 0.2.0.0
synopsis: Lastfm API interface
license: MIT
license-file: LICENSE
author: Matvey Aksenov, Dmitry Malikov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: Network APIs
description:
  Provides interface to Lastfm REST API, supports XML and JSON formats.
cabal-version: >= 1.10
build-type: Simple

library
  default-language: Haskell2010
  build-depends:
    aeson,
    base >= 3 && < 5,
    bytestring,
    cereal,
    containers >= 0.5,
    contravariant,
    crypto-api,
    http-conduit >= 1.9,
    http-types,
    network,
    pureMD5,
    text,
    void
  hs-source-dirs: src
  exposed-modules:
    Network.Lastfm
    Network.Lastfm.Album
    Network.Lastfm.Artist
    Network.Lastfm.Authentication
    Network.Lastfm.Chart
    Network.Lastfm.Event
    Network.Lastfm.Geo
    Network.Lastfm.Group
    Network.Lastfm.Internal
    Network.Lastfm.Library
    Network.Lastfm.Playlist
    Network.Lastfm.Radio
    Network.Lastfm.Request
    Network.Lastfm.Response
    Network.Lastfm.Tag
    Network.Lastfm.Tasteometer
    Network.Lastfm.Track
    Network.Lastfm.User
    Network.Lastfm.Venue
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -funbox-strict-fields


test-suite json
  build-depends:
    aeson == 0.6.*,
    attoparsec >= 0.10,
    base >= 3 && < 5,
    bytestring >= 0.9 && < 0.11,
    HUnit,
    liblastfm,
    test-framework,
    test-framework-hunit,
    text
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: json.hs
  other-modules:
    Album
    Artist
    Chart
    Common
    Event
    Geo
    Group
    Library
    Playlist
    Tag
    Tasteometer
    Track
    User
    Venue
  ghc-options:
    -Wall
    -fno-warn-orphans
    -fno-warn-unused-do-bind


source-repository head
  type:     git
  location: https://github.com/supki/liblastfm
