name:          liblastfm
version:       0.4.0.0
synopsis:      Lastfm API interface
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov, Dmitry Malikov
maintainer:    Matvey Aksenov <matvey.aksenov@gmail.com>
category:      Network APIs
description:
  Provides interface to Lastfm REST API, supports XML and JSON formats.
cabal-version: >= 1.10
build-type:    Simple
extra-source-files:
  README.md
  CHANGELOG.md

  examples/README.md
  examples/desktop-authentication.hs
  examples/liblastfm-examples.cabal
  examples/mobile-authentication.hs
  examples/multitag-search.hs
  examples/playcount.hs
  examples/recommendations.hs
  examples/sort-friends.hs
  examples/web-authentication.hs

source-repository head
  type:     git
  location: https://github.com/supki/liblastfm

flag test-api
  description: a real API test
  default: False
  manual: True

library
  default-language: Haskell2010
  build-depends:
      aeson
    , base          >= 4 && < 5
    , bytestring
    , cereal
    , containers    >= 0.5
    , contravariant
    , crypto-api
    , http-conduit  >= 1.9
    , network
    , profunctors
    , pureMD5
    , semigroups
    , tagged
    , text
    , void
  hs-source-dirs:
   src
  exposed-modules:
    Network.Lastfm
    Network.Lastfm.Album
    Network.Lastfm.Artist
    Network.Lastfm.Authentication
    Network.Lastfm.Chart
    Network.Lastfm.Event
    Network.Lastfm.Geo
    Network.Lastfm.Group
    Network.Lastfm.Internal
    Network.Lastfm.Library
    Network.Lastfm.Playlist
    Network.Lastfm.Radio
    Network.Lastfm.Request
    Network.Lastfm.Response
    Network.Lastfm.Tag
    Network.Lastfm.Tasteometer
    Network.Lastfm.Track
    Network.Lastfm.User
    Network.Lastfm.Venue
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -funbox-strict-fields


test-suite api
  if !flag(test-api)
    buildable: False
  default-language: Haskell2010
  build-depends:
      base                 >= 4 && < 5
    , bytestring
    , HUnit
    , lens
    , lens-aeson           >= 0.1.2
    , liblastfm
    , hspec
    , text
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test/api
  main-is: Spec.hs
  other-modules:
    SpecHelper
    AlbumSpec
    ArtistSpec
    ChartSpec
    EventSpec
    GeoSpec
    GroupSpec
    LibrarySpec
    PlaylistSpec
    TagSpec
    TasteometerSpec
    TrackSpec
    UserSpec
    VenueSpec
  ghc-options:
    -Wall
    -fno-warn-orphans
    -fno-warn-unused-do-bind

test-suite spec
  default-language: Haskell2010
  build-depends:
      aeson
    , base                    >= 4 && < 5
    , bytestring
    , cereal
    , containers
    , contravariant
    , crypto-api
    , hspec
    , hspec-expectations-lens >= 0.2.0.0
    , http-conduit
    , lens
    , lens-aeson
    , network
    , profunctors
    , pureMD5
    , tagged
    , text
    , void
  type: exitcode-stdio-1.0
  hs-source-dirs:
    src
    test/spec
  main-is: Spec.hs
  other-modules:
    Network.Lastfm.ResponseSpec
  ghc-options:
    -Wall
  cpp-options:
    -DTEST
