name: liblastfm-examples
version: 0.2.0.0
synopsis: Examples for liblastfm
license: MIT
license-file: LICENSE
author: Matvey Aksenov, Dmitry Malikov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: Network APIs
description: Haddock documentation isn't enough to get feeling of the library
cabal-version: >= 1.10
build-type: Simple

executable sort-friends
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.2.0.0,
                 async,
                 text,
                 aeson,
                 lens,
                 aeson-lens
  main-is: sort-friends.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
               -threaded

executable multitag-search
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 aeson
  main-is: multitag-search.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable web-authentication
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 happstack-server,
                 transformers,
                 lens,
                 aeson-lens
  main-is: web-authentication.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable desktop-authentication
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 lens-aeson
  main-is: desktop-authentication.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable netwire-scrobbler
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.2.0.0,
                 old-locale,
                 time,
                 containers,
                 mtl,
                 text,
                 netwire,
                 libmpd
  main-is: netwire-scrobbler.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable playcount
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 lens-aeson
  main-is: playcount.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable recommendations
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.2.0.0,
                 lens,
                 aeson,
                 aeson-lens
  main-is: recommendations.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
