name: liblastfm-examples
version: 0.2.0.0
synopsis: Examples for liblastfm
license: MIT
license-file: LICENSE
author: Matvey Aksenov, Dmitry Malikov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: Network APIs
description: Haddock documentation isn't enough to get feeling of the library
cabal-version: >= 1.10
build-type: Simple

executable sort-friends
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.2.0.0,
                 async,
                 text,
                 aeson,
                 lens,
                 lens-aeson
  main-is: sort-friends.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
               -threaded

executable multitag-search
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 aeson
  main-is: multitag-search.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable web-authentication
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 lens-aeson,
                 happstack-server,
                 transformers,
                 lens
  main-is: web-authentication.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable desktop-authentication
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 lens-aeson
  main-is: desktop-authentication.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable mobile-authentication
  default-language: Haskell2010
  build-depends: base >=3 && < 5,
                 liblastfm >= 0.1.0.0,
                 lens,
                 lens-aeson,
                 text
  main-is: mobile-authentication.hs
  ghc-options: -Wall

executable playcount
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.1.0.0,
                 text,
                 lens,
                 lens-aeson
  main-is: playcount.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable recommendations
  default-language: Haskell2010
  build-depends: base >= 3 && < 5,
                 liblastfm >= 0.2.0.0,
                 text,
                 aeson,
                 lens,
                 lens-aeson
  main-is: recommendations.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
