name: liblastfm-examples
version: 0.4.1.0
synopsis: Examples for liblastfm
license: MIT
license-file: LICENSE
author: Matvey Aksenov, Dmitry Malikov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: Network APIs
description: Haddock documentation isn't enough to get feeling of the library
cabal-version: >= 1.10
build-type: Simple

executable sort-friends
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , async
    , text
    , aeson
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
  main-is: sort-friends.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -threaded

executable multitag-search
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , text
    , lens             >= 4.4
    , aeson
  main-is: multitag-search.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

executable web-authentication
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
    , happstack-server >= 7.3
    , transformers
  main-is: web-authentication.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

executable desktop-authentication
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , text
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
  main-is: desktop-authentication.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

executable mobile-authentication
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
    , text
  main-is: mobile-authentication.hs
  ghc-options:
    -Wall

executable playcount
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , text
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
  main-is: playcount.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

executable recommendations
  default-language: Haskell2010
  build-depends:
      base             >= 4 && < 5
    , liblastfm        >= 0.4.0.0
    , text
    , aeson
    , lens             >= 4.4
    , lens-aeson       >= 1.0.0.1
  main-is: recommendations.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
